# dio

./: LICENSE  README.md  app.py  light.py  main.py  pyproject.toml  switch.py
.github/workflows/: pylint.yml
