[project]
name = "dio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "pylint-qt>=0.1.0",
    "pyqt6>=6.11.0",
    "qswitchcontrol>=1.0.4",
    "uldaq>=1.2.3",
]
[tool.pylint.main]
extension-pkg-allow-list = ["PyQt6"]

[tool.pylint.basic]
# Qt method matching
good-names-rgxs = ["paintEvent", "hitButton"]